[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "YOAIR"
version = "1.0.0"
description = "Air Gesture Controller - Control your cursor with hand gestures"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "pyautogui",
    "pywin32",
]

[project.urls]
Home = "https://github.com/InventorBlackFox/YOAIR"

[tool.setuptools.packages.find]
where = ["."]
include = ["YOAIR*"]
